WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66540
[EFL] URL of resources are not decoded
https://bugs.webkit.org/show_bug.cgi?id=66540
Summary
[EFL] URL of resources are not decoded
Grzegorz Czajkowski
Reported
2011-08-18 23:05:32 PDT
Fix ewk_frame_resources_location_get which was returning the encoded URL of resources. As a result characters for instance, %20 occurred. For now returned strings are decoded.
Attachments
proposed patch
(2.17 KB, patch)
2011-08-18 23:11 PDT
,
Grzegorz Czajkowski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Grzegorz Czajkowski
Comment 1
2011-08-18 23:11:17 PDT
Created
attachment 104465
[details]
proposed patch
Gyuyoung Kim
Comment 2
2011-08-18 23:25:16 PDT
Comment on
attachment 104465
[details]
proposed patch LGTM.
Leandro Pereira
Comment 3
2011-08-19 10:12:39 PDT
Comment on
attachment 104465
[details]
proposed patch Informal r+.
Gyuyoung Kim
Comment 4
2011-08-29 03:07:44 PDT
CC'ing kent. I'm not sure if kent is able to review this patch. But, I think he is able enough to review this patch.
Ryosuke Niwa
Comment 5
2011-09-27 23:43:32 PDT
Comment on
attachment 104465
[details]
proposed patch looks sane to me.
WebKit Review Bot
Comment 6
2011-09-28 00:11:45 PDT
Comment on
attachment 104465
[details]
proposed patch Clearing flags on attachment: 104465 Committed
r96195
: <
http://trac.webkit.org/changeset/96195
>
WebKit Review Bot
Comment 7
2011-09-28 00:11:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug