[EFL] URL of resources are not decoded. https://bugs.webkit.org/show_bug.cgi?id=66540

Patch by Grzegorz Czajkowski <g.czajkowski@samsung.com> on 2011-09-28
Reviewed by Ryosuke Niwa.

Fix ewk_frame_resources_location_get which was returning the encoded URL of resources.
As a result characters for instance, %20 occurred. For now returned strings are decoded.

* ewk/ewk_frame.cpp:
(ewk_frame_resources_location_get):

Canonical link: https://commits.webkit.org/84964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96195 268f45cc-cd09-0410-ab3c-d52691b4dbfc